add module history

--- a/src/app/feature/history/components/ItemShoppingHistory/styles.module.scss
+++ b/src/app/feature/history/components/ItemShoppingHistory/styles.module.scss
@@ -11,6 +11,8 @@
     box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.05);
     border-radius: 12px;
     margin-bottom: 28px;
+    cursor: pointer !important;
+
     &__name {
       font-size: 1em;
       font-weight: 500;
