--- a/src/app/shared/components/ItemProduct/styles.module.scss
+++ b/src/app/shared/components/ItemProduct/styles.module.scss
@@ -26,6 +26,16 @@
     a {
       text-decoration: none;
     }
+
+    a:link, a:visited {
+      color: $black;
+    }
+  }
+
+  &__counterProduct {
+    font-size: 12px;
+    width: 35px;
+    color: $orange !important;
   }
 }
 
