--- a/src/app/shared/components/Aside/styles.module.scss
+++ b/src/app/shared/components/Aside/styles.module.scss
@@ -15,6 +15,27 @@
       margin-right: -389px;
       visibility: hidden;
     }
+
+    @include media('mobile') {
+      position: fixed;
+      right: 0;
+      width: 100%;
+    }
+  }
+
+  &__close_button {
+    display: none;
+
+    @include media('mobile') {
+      display: block;
+    }
+    button {
+      position: absolute;
+      top: 13px;
+      left: 10px;
+      border: none;
+      background-color: transparent;
+    }
   }
 }
 
