--- a/src/app/shared/components/HeaderLeft/styles.module.scss
+++ b/src/app/shared/components/HeaderLeft/styles.module.scss
@@ -8,6 +8,10 @@
     height: 100%;
     background-color: $light-card;
     width: 94px ;
+
+    @include media('md') {
+      width: 61px ;
+    }
     nav {
       @include d-flex-column();
       align-items: center;
