--- a/src/app/shared/components/NavItem/styles.module.scss
+++ b/src/app/shared/components/NavItem/styles.module.scss
@@ -20,5 +20,10 @@
       height: 100%;
       border-radius: 0px 4px 4px 0px;
     }
+
+    &:link, 
+    &:visited {
+      color: $black;
+    }
   }
 }
