--- a/src/app/shared/components/Aside/styles.module.scss
+++ b/src/app/shared/components/Aside/styles.module.scss
@@ -17,7 +17,9 @@
     }
 
     @include media('mobile') {
+      background-color: $white;
       position: fixed;
+      z-index: 2;
       right: 0;
       width: 100%;
     }
