--- a/src/app/feature/Products/components/ListGestionProduct/styles.module.scss
+++ b/src/app/feature/Products/components/ListGestionProduct/styles.module.scss
@@ -46,7 +46,7 @@
       position: relative;
       overflow-y: auto;
       overflow-x: hidden;
-      flex: 1;
+      height: 100%;
     }
 
     &__action {
