--- a/src/styles.scss
+++ b/src/styles.scss
@@ -189,7 +189,7 @@ h1, h2, h3, h4, h5, h6, p {
 .pb-34 { padding-bottom: 34px }
 .pb-40 { padding-bottom: 40px }
 
-
+.pl-0 { padding-left: 0px }
 .pl-10 { padding-left: 10px }
 .pl-20 { padding-left: 20px }
 .pl-30 { padding-left: 30px }
