--- a/src/app/feature/history/components/ItemShoppingHistory/styles.module.scss
+++ b/src/app/feature/history/components/ItemShoppingHistory/styles.module.scss
@@ -12,6 +12,24 @@
     border-radius: 12px;
     margin-bottom: 28px;
     cursor: pointer !important;
+    
+    @include media('mobile') {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 16px;
+    }
+
+    &__info {
+      
+      display: flex;
+      
+
+      @include media('mobile') {
+        justify-content: space-between;
+        gap: 16px;
+        width: 100%;
+      }
+    }
 
     &__name {
       font-size: 1em;
@@ -38,6 +56,10 @@
       border-radius: 8px;
       margin-left: 27px;
       margin-right: 33px;
+
+      @include media('mobile') {
+        margin: 0;
+      }
     }
 
     &__arrow-right {
