--- a/src/app/components/features/Auth/Pages/Login.module.scss
+++ b/src/app/components/features/Auth/Pages/Login.module.scss
@@ -1,4 +1,4 @@
-
+@import '../../../../../assets/scss/mixins.scss';
 .loginPage {
   display: flex;
   background-color: white;
@@ -8,6 +8,10 @@
   gap: 2rem;
   & > div:first-child {
     background-color: #e1e1e1;
+
+    @include media('md') {
+      display: none;
+    }
   }
   & > div {
     flex: 1;
@@ -16,6 +20,10 @@
     display: flex;
     align-items: center;
     width: 100%;
+
+    @include media('md') {
+      padding: 1rem;
+    }
   }
 
   .mainTitle {
