--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,6 +67,7 @@ h1, h2, h3, h4, h5, h6, p {
   font-weight: 700;
   text-decoration: none;
   font-size: 16px;
+  max-height: 58px;
 }
 
 .btn-md {
